@@ -1,8 +1,11 @@
 Changes for APR 1.3.0
 
-  *) Add apr_sockaddr_ip_getbuf() function. [Joe Orton]
+  *) Fix apr_socket_addr_get(,APR_REMOTE,) after a non-blocking
+     connection is completed.  [Joe Orton]
 
-  *) Fix handling of %pI in apr_psprintf. [Joe Orton]
+  *) Add apr_sockaddr_ip_getbuf() function.  [Joe Orton]
+
+  *) Fix handling of %pI in apr_psprintf.  [Joe Orton]
 
   *) Provide APR_VERSION_AT_LEAST() macro for applications which 
      want to enable features based on a required level of APR.
